--- a/Client/src/styles/Navbar.css
+++ b/Client/src/styles/Navbar.css
@@ -1,5 +1,5 @@
 .dropbtn {
-  background-color: #4caf50;
+  background-color: #1c1b1a;
   color: white;
   padding: 16px;
   font-size: 16px;
@@ -21,9 +21,9 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  right: 40px;
+  right: 20px;
   background-color: #f9f9f9;
-  min-width: 160px;
+  min-width: 180px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
